# PDS2-2026-PF-grupo1

./: .gitignore  2025019518.txt  2025075086.txt  2025116670.txt  CMakeLists.txt  Doxyfile  Makefile  README.md  comentarios.csv  comunidades.csv  perfis.csv  posts.csv  usuarios.csv
data/: comentarios.csv  comunidades.csv  perfis.csv  posts.csv  usuarios.csv
database/: schema.sql
design/: README.md  crc_cards.md  notas-C6.md  notas-C7.md  user_stories.md
edu-social-backend/: CMakeLists.txt
edu-social-backend/database/: schema.sql
edu-social-backend/include/edu_social/app/: app.h
edu-social-backend/include/edu_social/database/: migration_runner.h  sqlite_connection.h
edu-social-backend/scripts/: reset_db.sh  run.ps1  run.sh  setup.ps1  setup.sh
edu-social-backend/src/: main.cpp
edu-social-backend/src/app/: app.cpp  app.h
edu-social-backend/src/database/: migration_runner.cpp  migration_runner.h  sqlite_connection.cpp
edu-social-main/: Makefile
edu-social-main/scripts/: reset_db.ps1
edu-social-main/src/database/: sqlite_connection.cpp  sqlite_connection.h
group_members_information/: 2025019704.txt  2025075086.txt  2025116670.txt
include/app/: app.h
include/database/: migration_runner.h  sqlite_connection.h
include/domain/: admin.hpp  aplicacao.hpp  armazenamento.hpp  busca.hpp  comentario.hpp  comment.hpp  community.hpp  comunidade.hpp  console_utils.hpp  content.hpp  feed.hpp  gerenciador_csv.hpp  menus.hpp  notasProf.md  perfil.hpp  post.hpp  post_source.hpp  restaurar_entrada_cin.hpp  search_service.hpp  sistema.hpp  user.hpp  usuario.hpp
include/domain/domain2/: armazenamento.hpp  busca.hpp  coisasPraDepois.md  comunidade.hpp  conferirCadastro.hpp  feed.hpp  perfil.hpp  post.hpp  post2.hpp  sistema.hpp
include/edu_social/app/: Comment.hpp  Community.hpp  Feed.hpp  Post.hpp  Search.hpp  User.hpp
include/http/: api_routes.h  auth_routes.h  community_routes.h  feed_routes.h  health_routes.h  not_implemented_response.h  post_routes.h  search_routes.h  user_routes.h
scripts/: alunos.json  count_commits_alunos.cpp  coverage.sh  criar_usuario.in  demo.in  docs.ps1  docs.sh  meu_teste.in  reset_db.ps1  reset_db.sh  run.ps1  run.sh  setup.ps1  setup.sh  test.ps1  test.sh
src/: main.cpp
src/app/: app.cpp
src/database/: migration_runner.cpp  sqlite_connection.cpp
src/domain/: admin.cpp  aplicacao.cpp  armazenamento.cpp  busca.cpp  comentario.cpp  comment.cpp  community.cpp  comunidade.cpp  console_utils.cpp  content.cpp  feed.cpp  gerenciador_csv.cpp  menus.cpp  perfil.cpp  post.cpp  restaurar_entrada_cin.cpp  search_service.cpp  sistema.cpp  user.cpp  usuario.cpp
src/http/: api_routes.cpp  auth_routes.cpp  community_routes.cpp  feed_routes.cpp  health_routes.cpp  not_implemented_response.cpp  post_routes.cpp  search_routes.cpp  user_routes.cpp
tests/: comment_tests.cpp  community_tests.cpp  content_tests.cpp  feed_tests.cpp  post_tests.cpp  search_service_tests.cpp  test_admin.cpp  test_aplicacao.cpp  test_armazenamento.cpp  test_busca.cpp  test_comentario.cpp  test_comunidade.cpp  test_console_utils.cpp  test_feed.cpp  test_gerenciador_csv.cpp  test_main.cpp  test_menus.cpp  test_perfil.cpp  test_post.cpp  test_restaurar_entrada_cin.cpp  test_sistema.cpp  test_usuario.cpp  user_tests.cpp
tests/doctest/: doctest.h
